k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1-backend
  labels:
    app: p1-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: p1-backend
  template:
    metadata:
      labels:
        app: p1-backend
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-chocolate-charger/p2-choco-charger-backend:lastest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
