k8s/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: backend 
        # image: ghcr.io/cs-muic/scalable-p2-scalable-t3-chocolate-charger/p2-choco-charger-backend:latest
        image: ghcr.io/marcarisen/p2-choco-charger-backend:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
