k8s/rq-worker-compose-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rq-worker-compose
  labels:
    app: rq-worker-compose
spec:
  selector:
    matchLabels:
      app: rq-worker-compose
  template:
    metadata:
      labels:
        app: rq-worker-compose
    spec:
      containers:
      - name: rq-worker-compose
        # image: ghcr.io/cs-muic/scalable-p2-scalable-t3-chocolate-charger/p2-choco-charger-compose-worker:latest
        # image: ghcr.io/marcarisen/p2-choco-charger-compose-worker:latest
        image: ghcr.io/marcarisen/p2-choco-charger-worker:latest
        command: ["poetry", "run", "python3", "compose.py"]
      imagePullSecrets:
      - name: dockerconfigjson-github-com
