k8s/rq-worker-extraction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rq-worker
  labels:
    app: rq-worker
spec:
  selector:
    matchLabels:
      app: rq-worker
  template:
    metadata:
      labels:
        app: rq-worker
    spec:
      containers:
      - name: rq-worker
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-chocolate-charger/p2-choco-charger-extract-worker:latest  
      imagePullSecrets:
      - name: dockerconfigjson-github-com
