k8s/rq-worker-log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rq-worker-log
  labels:
    app: rq-worker-log
spec:
  selector:
    matchLabels:
      app: rq-worker-log
  template:
    metadata:
      labels:
        app: rq-worker-log
    spec:
      containers:
      - name: rq-worker-log
        # image: ghcr.io/cs-muic/scalable-p2-scalable-t3-chocolate-charger/p2-choco-charger-update-worker:latest
        image: ghcr.io/marcarisen/p2-choco-charger-update-worker:latest
      imagePullSecrets:
      - name: dockerconfigjson-github-com
