k8s/controller-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: controller
spec:
  selector:
    app: controller
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
