k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type:  ClusterIP
  ports:
  - name:  http
    port:  81
    targetPort:  3000
